[package]
name = "surveyor"
version = "0.1.0"
authors = ["Andrew Mitchell <andrewpmitchell7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
confy = "0.4.0"
git2 = "0.13.17"
serde = { version = "1.0.123", features = ["derive"] }
structopt = "0.3.21"
